[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Frame.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FrameLabel.gd" type="Script" id=2]
[ext_resource path="res://UI/PlantInfo.gd" type="Script" id=3]

[node name="PlantInfo" type="MarginContainer"]
margin_right = 114.0
margin_bottom = 80.0
rect_scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 114.0
margin_bottom = 80.0
custom_constants/separation = -2

[node name="TitleFrame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleFrameLabel" type="RichTextLabel" parent="VBoxContainer/TitleFrame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_right = 57.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[center]Snow Peashooter[/center]"
text = "Snow Peashooter"
script = ExtResource( 2 )

[node name="MainFrame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 14.0
margin_right = 114.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="MainFrameLabel" type="RichTextLabel" parent="VBoxContainer/MainFrame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_right = 57.0
margin_bottom = 58.0
rect_min_size = Vector2( 114, 64 )
bbcode_enabled = true
bbcode_text = "[center][color=green]HP[/color] 100
[color=yellow]Cooldown[/color] 6 Seconds
[color=red]Attack Interval[/color] 1.5 Seconds
[color=red]Attack Range[/color] 150 Units[/center]"
text = "HP 100
Cooldown 6 Seconds
Attack Interval 1.5 Seconds
Attack Range 150 Units"
script = ExtResource( 2 )
